quiz and study sets provided

--- a/study-sets/02-ch.md
+++ b/study-sets/02-ch.md
@@ -6,7 +6,9 @@ the client server approach involves a centralized architecture where servers pro
 
 **2.  what are the differences between tcp and udp?**
 
-tcp transmission control protocol is a connection oriented protocol that ensures reliable data transmission with error checking, data recovery, and flow control, making it suitable for applications where accuracy is crucial, like web browsing and email.  in contrast udp user diagram protocol is connectionless and focuses on speed over reliability, with no error checking or recovery, making it ideal for real time applications like video streaming and online gaming where occasional data loss is acceptable.
+tcp transmission control protocol is a connection oriented protocol that ensures reliable data transmission with error checking, data recovery, and flow control, making it suitable for applications where accuracy is crucial, like web browsing and email.  
+
+in contrast udp user diagram protocol is connectionless and focuses on speed over reliability, with no error checking or recovery, making it ideal for real time applications like video streaming and online gaming where occasional data loss is acceptable.
 
 **3.  what is http and what is its primary purpose in the context of the world wide web?**
 
