--- a/content/03-ch.md
+++ b/content/03-ch.md
@@ -354,7 +354,7 @@ the state of receiver (did the receiver get my message correctly?) isn't known t
 ###  `rdt2.0` has a fatal flaw
 
 -  what happens if ack / nak corrupted?
-    +  sender doesnt know what happened at receiver
+    +  sender doesn't know what happened at receiver
     +  can't just retransmit: possible duplicate
 
 **handling duplicates**
@@ -363,7 +363,11 @@ the state of receiver (did the receiver get my message correctly?) isn't known t
 -  receiver discards (doesn't deliver up) duplicate pkt
 
 **stop and wait**
--  sender sneds one packet, then waits for receiver response
+sender sends one packet, then waits for receiver response
+
+###  `rdt2.1`:  sender, handling garbled ack/naks
+
+<img src="./2-rdt.png" style="width:700px;">
 
 ###  `rdt2.1`  discussion
 
@@ -385,6 +389,20 @@ the state of receiver (did the receiver get my message correctly?) isn't known t
 -  retransmission
 -  sequence numbers (duplicate detection)
 
+###  `rdt2.2`:  a nak free protocol
+
+-  same functionality as `rdt2.1`, using acks only
+-  instead of nak, receiver sends ack for last psk received ok
+    +  receiver must explicitly include seq # of pkt being acked
+-  duplicate ack at sender results in same action as nak:  retransmit last pkt
+
+###  `rdt` protocol mechanisms
+
+-  error detection (e.g. checksum)
+-  acks, naks
+-  retransmission
+-  sequence numbers (duplicate detection)
+
 ###  rdt3.0:  channels with errors and loss
 
 **new channel assumption**:  underlying channel can also lose packets (data, acks)
@@ -397,11 +415,6 @@ the state of receiver (did the receiver get my message correctly?) isn't known t
     +  receiver must specify sequence number of packet being acknowledged
 -  use countdown timer to interrupt after reasonable amount of time
 
-```mermaid
-graph TB
-A["wait for call 0 from above"] 
--->|"rdt_send(data)\nsndpkt = make_pkt(0, data, checksum)"| B["wait for ack 0"]
-```
 
 ###  performance of rdt3.0 stop and wait
 
