(updated) slides for june 28

--- a/content/03-ch.md
+++ b/content/03-ch.md
@@ -492,3 +492,288 @@ $$
 -  we saw the use of a common set of techniques, acknowledgements, checksums, and sequence numbers, timeout and retransmit mechanisms
 -  primarily in the context of the transport layer but happens at all the layer
 -  this is a top 5 networking problem
+
+
+###  tcp:  overview
+
+-  point to point:  one sender, one receiver
+-  reliable, in order byte stream:  no message boundaries
+-  full duplex data:  bidirectional data flow in same connection, mss: maximum segment size
+-  cumulative acks
+-  pipelining:  tcp congestion and flow control set window size
+-  connection oriented:  handshaking (exchange of control messages) initializes sender, receiver state before data exchange
+-  flow controlled:  sender will not overwhelm receiver
+
+###  tcp segment structure
+
+```
+0             7   8            15   16           23   24           31
++---------------+-----------------+-----------------+---------------+
+| source port #                   | destination port #              |
++---------------+-----------------+-----------------+---------------+
+| sequence number                                                   |
++---------------+-----------------+-----------------+---------------+
+| acknowledgment number                                             |
++---------------+-----------------+-----------------+---------------+
+| header length |c|e|u|a|p|r|s| f | receive window                  |
++---------------+-----------------+-----------------+---------------+
+| checksum                        | urgent pointer                  |
++---------------+-----------------+-----------------+---------------+
+| options (variable length)                                         |
++---------------+-----------------+-----------------+---------------+
+| application data (variable length)                                |
+| ...                                                               |
+| ...                                                               |
+| ...                                                               |
++---------------+-----------------+-----------------+---------------+
+```
+
+###  tcp sequence numbers, acks
+
+-  sequence numbers:  byte stream number of first byte in segment data
+-  acknowledgements:  sequence # of next byte expeected from other side, cumulative ack
+
+**question**:  how receiver handles out of order segments?
+
+**answer**:  tcp specification doesn't say up to implementor
+
+**simple telnet scenario**
+
+```mermaid
+sequenceDiagram
+    participant A as sender
+    participant B as receiver
+    A->>B:  data (seq # x)
+    B->>A:  ack (seq # x + 1)
+    B->>A:  data (seq # y)
+    B->>A:  ack (seq # y + 1)
+```
+
+###  tcp round trip time, timeout
+
+**question**:  how to set tcp timeout value?
+
+**answer**:  longer than an rtt, but rtt varies.  
+-  too short:  premature timeout, unnecessary retransmissions
+-  too long:  slow reaction to segment loss
+
+**question**:  how to estimate rtt?
+-  `SampleRTT`:  measured time from segment transmission until ack receipt, ignore retransmissions
+-  `SampleRTT`:  will vary, want estimated rtt to be smoother.  average several recent measurements, but just current `SampleRTT`
+
+$$
+EstimatedRTT = (1 - \alpha) \cdot \text{EstimatedRTT} + \alpha \cdot \text{SampleRTT}
+$$
+
+-  exponential weighted moving average (ewma)
+-  influence of past sample decreases exponentially fast
+-  typical value of $\alpha = 0.125$
+
+-  timeout interval:  `EstimatedRTT` plus "safety margin"
+-  large variation in `EstimatedRTT`:  want a larger safety margin
+
+$$
+\text{TimeoutInterval} = \text{EstimatedRTT} + 4 \cdot \text{DevRTT}
+$$
+
+-  `DevRTT`:  EWMA of `SampleRTT` deviation from `EstimatedRTT`
+
+$$
+\text{DevRTT} = (1 - \beta) \cdot \text{DevRTT} + \beta \cdot |\text{SampleRTT} - \text{EstimatedRTT}|
+$$
+
+-  $\beta = 0.25$
+
+###  tcp sender
+
+**event: data received from application**
+-  create segment with sequence number
+-  sequence number is byte stream number of first data byte in segment
+-  ...
+
+###  tcp receiver: ack generation
+
+###  tcp:  retransmission scenarios
+
+```mermaid
+sequenceDiagram
+    participant A as sender
+    participant B as receiver
+    A->>B:  data (seq # x)
+    B->>A:  ack (seq # x + 1)
+    A->>B:  data (seq # y
+    B->>A:  ack (seq # x + 1)
+    A->>B:  data (seq # x)
+    B->>A:  ack (seq # x + 1)
+```
+
+**lost ack scenario**
+
+```mermaid
+sequenceDiagram
+    participant A as sender
+    participant B as receiver
+    A->>B:  data (seq # x)
+    B->>A:  ack (seq # x + 1)
+    A->>B:  data (seq # y)
+    B->>A:  ack (seq # x + 1)
+    A->>B:  data (seq # z)
+    B->>A:  ack (seq # x + 1)
+```
+
+**premature timeout scenario**
+
+```mermaid
+sequenceDiagram
+    participant A as sender
+    participant B as receiver
+    A->>B:  data (seq # x)
+    B->>A:  ack (seq # x + 1)
+    A->>B:  data (seq # y)
+    B->>A:  ack (seq # x + 1)
+    A->>B:  data (seq # z)
+    B->>A:  ack (seq # x + 1)
+    A->>B:  data (seq # x)
+    B->>A:  ack (seq # x + 1)
+```
+
+**cumulative ack overs for earlier lost ack**
+
+```mermaid
+sequenceDiagram
+    participant A as sender
+    participant B as receiver
+    A->>B:  data (seq # x)
+    B->>A:  ack (seq # x + 1)
+    A->>B:  data (seq # y)
+    B->>A:  ack (seq # x + 1)
+    A->>B:  data (seq # z)
+    B->>A:  ack (seq # x + 1)
+    A->>B:  data (seq # x)
+    B->>A:  ack (seq # x + 1)
+    A->>B:  data (seq # x + 1)
+    B->>A:  ack (seq # x + 1)
+```
+
+###  tcp fast retransmit
+
+**tcp fast retransmit**
+-  if sender receives 3 addiyional acks for the same data (riple duplicate acks), resend unacked segment with smallest sequence number
+-  likely that unacked segment lost, so don't wait for timeout
+
+###  tcp flow control
+
+**receiver protocol stack**
+
+```
++-----------------------------------+
+| application process               | <- application removing data from tcp socket buffer
+|                                   |
++------------|         |------------+
+|            | socket  |            |
++------------v         v------------+
+|    tcp socket receiver buffers    |
++-----------------------------------+
+|  tcp code                         |
++-----------------------------------+
+|  ip code                          | <- network layer delivering ip datagram
+|                                   |    payload into tcp socket buffers
++-----------------------------------+
+```
+
+**question**:  what happens if network layer delivers data faster than application layer removes data from socket buffer?
+
+**answer**:  flow control -  receiver controls sender, so sender won't overflow receiver's buffer by transmitting too much, too fast
+
+-  tcp receiver advertises free buffer space in `rwnd` field in the tcp header
+-  `rcvbuffer` size set 
+
+###  tcp connection managemet
+
+**tcp is connection oriented**
+-  what does it mean when the sender and receiver have a lot of shared states?
+-  how does it establish the shared state?
+-  how does it teardown a connection when a communication is done?
+
+**before exchanging data, sender/receiver handshake**
+-  
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+###  interactive problem
+
+**computing tcp's rtt and timeout values**
+
+**question**:  suppose that tcp's current estimated values for the round trip time (estimatedRTT) and deviation in the RTT (DevRTT) are 400 msec and 39 msec, respectively.  supposed that the next three measured values of the rtt are 390 msec, 400 msec, and 230 msec.
+
+compute tcp's new value of devrtt, estimatedrtt, and the tcp timeout value after each of these three measured rtt values is obtained.  use the values of $\alpha = 0.125$ and $\beta = 0.25$.  round your answers to two decimal places after leading zeros.
+
+1.  what is the estimated rtt after the first rtt?
+
+estimatedrtt = (1 - alpha
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
