--- a/content/03-ch.md
+++ b/content/03-ch.md
@@ -643,22 +643,22 @@ sequenceDiagram
 sequenceDiagram
     participant A as sender
     participant B as receiver
-    A->>B:  data (seq # x)
-    B->>A:  ack (seq # x + 1)
-    A->>B:  data (seq # y)
-    B->>A:  ack (seq # x + 1)
-    A->>B:  data (seq # z)
-    B->>A:  ack (seq # x + 1)
-    A->>B:  data (seq # x)
-    B->>A:  ack (seq # x + 1)
-    A->>B:  data (seq # x + 1)
-    B->>A:  ack (seq # x + 1)
+    A->>B:  data (seq x)
+    B->>A:  ack (seq  x + 1)
+    A->>B:  data (seq y)
+    B->>A:  ack (seq x + 1)
+    A->>B:  data (seq z)
+    B->>A:  ack (seq x + 1)
+    A->>B:  data (seq x)
+    B->>A:  ack (seq x + 1)
+    A->>B:  data (seq x + 1)
+    B->>A:  ack (seq x + 1)
 ```
 
 ###  tcp fast retransmit
 
 **tcp fast retransmit**
--  if sender receives 3 addiyional acks for the same data (riple duplicate acks), resend unacked segment with smallest sequence number
+-  if sender receives 3 additional acks for the same data ( =duplicate acks), resend unacked segment with smallest sequence number
 -  likely that unacked segment lost, so don't wait for timeout
 
 ###  tcp flow control
@@ -686,80 +686,253 @@ sequenceDiagram
 **answer**:  flow control -  receiver controls sender, so sender won't overflow receiver's buffer by transmitting too much, too fast
 
 -  tcp receiver advertises free buffer space in `rwnd` field in the tcp header
--  `rcvbuffer` size set 
+-  `rcvbuffer` size set via socket options (typical default is 4096 bytes)
+-  many operating systems auto adjust `RcvBuffer`
+-  sender limits amount of unacknowledged (in-flight) data to received `rwnd`
+-  guarantees receive buffer will not overflow
 
-###  tcp connection managemet
+###  tcp connection management
 
-**tcp is connection oriented**
--  what does it mean when the sender and receiver have a lot of shared states?
+tcp is connection oriented
+
+-  what does it mean for a sender and receiver to have a lot of shared states?
 -  how does it establish the shared state?
 -  how does it teardown a connection when a communication is done?
 
-**before exchanging data, sender/receiver handshake**
--  
+before exchanging data, sender/receiver "handshake"
+-  agree to establish connection (each knowing the other is willing to establish a connection)
+-  agree on connection parameters (e.g. starting sequence numbers)
+
+`Socket clientSocket = newSocket("hostname", "port number");`
+
+`Socket connectionSocket = welcomeSocket.accept();`
+
+###  agreeing to establish a connection
+
+question:  will a 2 way handshake always work in network?
+-  variable delays
+-  retransmitted messages (e.g. req_conn(x)) due to message loss
+-  message reordering
+-  can't see each others side
+
+###  closing a tcp connection
+
+-  client, server each close their side of the connection
+    +  send tcp segment with fin bit = 1
+-  respond to received fin with ack
+    +  on receiving fin, ack can be combined with own fin
+-  simultaneous fin exchanges can be handled
+
+###  principles of congestion control
+
+**congestion**
+-  informally:  too many sources sending too much data too fast for the network to handle
+-  manifestations:
+    +  long delays (queuing in router buffers)
+    +  packet loss (buffer overflow at routers)
+-  different from flow control
+-  a top 10 problem
 
 
+###  causes/costs of congestion scenario 1
 
+simplest scenario
+-  one router, infinite buffers
+-  input, output link capacity: R
+-  two flows
+-  no retransmissions needed
 
+###  causes/costs of congestion scenario 2
 
+-  one router, finite buffers
+-  sender retransmits lost, timed out packet
+    +  application layer input = application layer output
+    +  transport-layer input includes retransmissions
+-  idealization:  perfect knowledge
+    +  sender sends only when router buffers available
+-  idealization:  some perfect knowledge
+    +  packets can be lost (dropped at router) due to full buffers
+    +  sender knows when packet has been dropped only resends if packet is known to be lost
 
+realistic scenario:  un-needed duplicates
+-  packets can be lost, dropped at router due to full buffers - requiring retransmissions
+-  but sender times can time out prematurely, sending two copies, both of which are delivered
 
+costs of congestion
+-  more work (retransmission) for given receiver throughput
+-  unneeded retransmissions:  link carries multiple copies of a packet
+-  decreasing maximum achievable throughput
 
+###  causes/costs of congestion:  scenario 3
 
+-  four senders
+-  multi-hop paths
+-  timeout/retransmit
 
+question:  what happens as original data input and original data plus retransmitted data input increase?
 
+answer:  as red original data plus retransmitted ata increases, all arriving blue packets at upper queue are dropped, blue throughput -> 0
 
+<img src="./causes.png">
 
+another cost of congestion
+-  when packet dropped, any upstream transmission capacity and buffering used for that packet was wasted
 
+###  causes/costs of congestion:  insights
 
+-  throughput can never exceed capacity
+-  delay increases as capacity approached
+-  loss/retransmission decreases effective throughput
+-  un-needed duplicates further decreases effective throughput
+-  upstream transmission capacity / buffering wasted for packets lost downstream
 
+###  approaches toward congestion control
 
+**end-end congestion control**
+-  no explicit feedback from network
+-  congestion inferred from observed loss, delay
+-  approach taken by tcp
 
+**network assisted congestion control**
+-  router provide direct feedback to sending/receiving hosts with flows passing through congested router
+-  may indicate congestion level or explicitly send sending rate
+-  tcp ecn, atm, decbit protocols
 
+###  tcp congestion control
 
+-  classic tcp:  loss-based, end-to-end
+-  additive increase, multiplicative decrease
+-  slow start and cubic
+-  enhanced tcps
+-  delay based congestion control tcp and explicit congestion notification
+-  tcp fairness
+-  back in the 1980s congestion collapse was actually beginning to be observed within the network
+-  in 1988 a networking researcher van jacobson published a paper on congestion avoidance and control
+-  the same mechanism in place now for 35 years even as the amount of traffic carried by the internet has gone up by more than a factor of a billion
 
+###  tcp congestion control:  aimd
 
+-  approaches:  senders can increase sending rate until packet loss (congestion) occurs, then decrease sending rate on loss event
 
+**additive increase**
+-  increasing sending rate by 1 maximum segment size every until loss is detected
 
+**multiplicative decrease**
+-  cut sending rate in half at each loss event
 
-###  interactive problem
+**aimd** sawtooth behavior:  probing for bandwidth
 
-**computing tcp's rtt and timeout values**
+<img src="./aimd.png" height=300px>
 
-**question**:  suppose that tcp's current estimated values for the round trip time (estimatedRTT) and deviation in the RTT (DevRTT) are 400 msec and 39 msec, respectively.  supposed that the next three measured values of the rtt are 390 msec, 400 msec, and 230 msec.
+###  tcp aimd: more 
 
-compute tcp's new value of devrtt, estimatedrtt, and the tcp timeout value after each of these three measured rtt values is obtained.  use the values of $\alpha = 0.125$ and $\beta = 0.25$.  round your answers to two decimal places after leading zeros.
+**multiplicative decrease** detail:  sending rate is
+-  cut in half on loss detected by triple duplicate ack (tcp reno)
+-  cut to 1 mss (maximum segment size) when loss detected by timeout (tcp tahoe)
 
-1.  what is the estimated rtt after the first rtt?
+**why aimd?**
+-  aimd - a distributed, asynchronous algorithm has shown to
+    +  optimize congestion flow rates network wide
+    +  have desirable stability properties
 
-estimatedrtt = (1 - alpha
+###  tcp congestion control details
 
+-  tcp sending behavior is roughly send `cwnd` bytes, wait rtt for acks, then send more types
+-  tcp rate = `cwnd` / rtt bytes/sec
+-  tcp sender limits transmission:  `LastByteSent - LastByteAcked <= cwnd`
+-  `cwnd` is dynamically adjusted in response to observed network congestion (implementing tcp congestion control)
 
+<img src="./cwnd.png" width=500px>
 
+###  tcp slow start 
 
+-  when connection begins, increase rate exponentially until first loss event
+    +  initially `cwnd` = 1 mss
+    +  double `cwnd` every rtt
+    +  done by incrementing `cwnd` for every ack received
+-  summary:  initial rate is slow but ramps up exponentially fast
 
+###  tcp:  from slow start to congestion avoidance
 
+**question**  when should the exponential increase switch to linear?
 
+**answer** when `cwnd` gets to 1/2 of its value before timeout
 
+**implementation**
+-  variable `sshthresh` 
+-  on loss event, `ssthreash` is set to 1/2 of `cwnd` just before loss event
 
+<img src="./congestion.png" width=400px>
 
+###  tcp congestion control
 
+-  classic tcp loss based end-to-end
+-  additive increase, multiplicative decrease
+-  slow start and cubic
+-  enhances tcps
+    +  delay based congestion control tcp and explicit congestion notification
+-  tcp fairness
+-  evolution of transport layer functionality
+-  summary
 
+###  tcp cubic
 
+-  is there a better way than aimd to probe for usable bandwidth?
+-  insight/intuition:
+    +  $w_{max}$:  sending rate at which congestion loss was detected
+    +  congestion state of bottleneck link probably hasnt changed much
+    +  after cutting rate/window in half on loss, initially ramp to $W_{max}$ faster, but then approach $w_{max}$ more slowly
 
+<img src="./cubic.png">
 
+-  k point in time when tcp window size will reach wmax
+    +  k itself is tunable
+-  increase w as a function of the cube of the distance between current time and k
+    +  larger increases when further away from k
+    +  smaller increases (cautious) when nearer k
+-  tcp cubic default in linux, most popular tcp for popular web servers
 
+###  tcp and the congested bottleneck link
 
+-  tcp (classic, cubic) increase tcp's sending rate until packet loss occurs at some router's output:  the bottleneck link 
+-  understanding congestion:  useful to focus on congested bottleneck link
 
+<img src="bottleneck.png">
 
+###  delay based tcp congestion control
 
+-  keeping sender to receiver pipe just full enough but no fuller:  keep bottleneck link busy transmitting, but avoid high delays/buffering
 
+**delay based approach**
+-  rtt_min -  minimum observed rtt (uncongested path)
+-  uncongested throughput with congestion window `cwnd` is cwnd/rtt_min
+-  if measured throughput is very close to uncongested throughput increase cwnd linearly
+-  else if measured throughput is far below uncongested throughput decrease cwnd linearly
+-  congestion control without inducing/forcing loss
+-  maximizing throughput while keeping delay low
+-  a number of deployed tcps take a delay based approach
+    +  bbr deployed on google's internal backbone network
 
+###  explicit congestion notification (ecn)
 
+-  tcp deployments often implement network assisted congestion control
+    +  two bits in ip header (tos field) marked by network router to indicate congestion
+    +  policy to determine marking chose by network operator
+-  congestion indication carried to destination
+-  destination sets ece(ecn-echo) bit on ack segment to notify sender of congestion
+-  involves both ip (ip header enc bit marking) and tcp (tcp header c,e bit marking)
 
+<img src="./ecn.png">
 
+###  tcp fairness
 
+fairness goal:  if k tcp sessions share same bottleneck link of bandwidth r, each should have an average rate of R/K
 
+question:  is tcp fair
+
+example:  two competing tcp sessions:
+-  additive increase gives slope of 1, as throughput increases
+-  multiplicative decrease decreases throughput proportionally 
 
 
 
