--- a/content/04-ch.md
+++ b/content/04-ch.md
@@ -82,6 +82,130 @@
 
 ###  scheduling policies:  weighted fair queuing
 
+###  network layer:  internet
+
+-  host, router network layer functions
+-  path-selection algorithms:  implemented in routing protocols (ospf, bgp) and sdn controller
+-  forwarding table
+-  ip protocol
+    +  datagram format
+    +  addressing
+    +  packet handling conventions
+-  icmp protocl
+    +  error reporting
+    +  router signaling
+
+###  ip datagram format
+
+```
+<---------------------- 32 bits ------------------------>
++-------------------------------------------------------+
+| version | head length | type of service | length      |
++-------------------------------------------------------+
+| 16-bit identifier     | flags | fragment offset       |
++-------------------------------------------------------+
+| time to live | upper layer | header checksum          |
++-------------------------------------------------------+
+| source ip address                                     |
++-------------------------------------------------------+
+| destination ip address                                |
++-------------------------------------------------------+
+| options (if any)                                      |
++-------------------------------------------------------+
+| payload data                                          |
+| variable length                                       |
+| typically a tcp or udp segment                        |
++-------------------------------------------------------+
+```
+
+-  `version`:  ip protocol version number
+-  `head length`:  header length in bytes
+-  `length`:  total datagram length in bytes
+-  `type of service`:  type of service (e.d. diffserv, ecn)
+-  `16-bit identifier`, `flags`, `fragment offset`:  used in fragmentation/reassembly
+-  `time to live`:  ttl remaining max hops decremented at each router
+-  `upper layer`:  upper layer protocol (e.g. tcp or udp)
+-  `header checksum`:  checksum of header only
+-  `source ip address`:  32-bit source ip address
+-  `destination ip address`:  32-bit destination ip address
+-  `options`:  timestamp, record route taken
+-  `payload data`:  data being carried by the datagram, actual message being sent
+
+###  ip addressing:  introduction 
+
+-  ip address:  32-bit identifier associated with each host or router interface
+-  interface:  connection between host/router and physical link
+    +  router's typically have multiple interfaces
+    +  host typically has one or two interfaces (e.g. wired ethernet, wireless 802.11)
+
+question:  how are interfaces actually connected
+
+answer:  wired ethernet interfaces connected by ethernet switches or wireless interfaces connected by wifi base station
+
+###  subnets
+
+-  what's a subnet
+    +  device interfaces that can physically reach each other without passing through an intervening router
+
+###  ip addressing:  cidr
+
+###  ip addresses:  how to get one?
+
+###  dhcp:  hynamic host configuration protocol
+
+###  dhcp client-server scenario
+
+###  dhcp:  more than ip addresses
+
+###  ip address: how to get one?
+
+###  hierarchical addressing:  route aggregation
+
+###  hierarchical addressing:  more specific routes
+
+###  ip addressing:  last words
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
